5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1601_1803.log
== SUBMITION (2019-03-25 18:22:09) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

a = conta % 10

print(a)
-- EXECUTION TIME:
0.198522
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:22:11) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

a = conta % 10

print(a)
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:22:43) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

a = conta % 10
b = conta % 100
c = conta % 1000
print(a, b, c)
-- OUTPUT:
0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:22:50) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

a = conta % 10
b = conta % 100
c = conta % 1000
print(a, b, c)
-- OUTPUT:
0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:24:28) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while conta > 0
 resto = conta % 10
	conta = (conta - resto)//10
print(conta)
-- EXECUTION TIME:
0.161251
-- ERROR:
  File "/home/codebench/codes/1601/1803/main.py", line 3
    while conta > 0
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:29) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while conta > 0
 resto = conta % 10
	conta = (conta - resto)//10
print(conta)
-- ERROR:
File "XXXX", line 3
    while conta > 0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:38) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while (conta > 0)
 resto = conta % 10
	conta = (conta - resto)//10
print(conta)
-- ERROR:
File "XXXX", line 3
    while (conta > 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:02) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while (conta > 0):
 resto = conta % 10
	conta = (conta - resto)//10
print(conta)
-- ERROR:
File "XXXX", line 5
    conta = (conta - resto)//10
                              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:29) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while (conta > 0):
 resto = conta % 10
 conta = (conta - resto)//10
print(conta)
-- ERROR:
File "XXXX", line 5
    conta = (conta - resto)//10
                              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:06) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while (conta > 0):
 resto = conta % 10
 conta = (conta - resto)//10
 print(conta)

-- OUTPUT:
200
20
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:48) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while (conta > 0):
 resto = conta % 10
 conta = conta//10
 print(conta)

-- OUTPUT:
200
20
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:27:52) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

while (conta > 0):
 resto = conta % 10
 conta = conta//10
 print(resto)

-- OUTPUT:
0
0
0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:30:13) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2
print(resto)
resto = conta % 10
conta = conta//10
b = resto*3
print(resto)

-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:31:48) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:31:50) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.138
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:09) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.183858
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:10) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.135288
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:14) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:15) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.126072
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:22) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.147551
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:32) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.196264
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:52) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.193655
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:52) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:44) 
-- CODE:
conta = int(input("Digite o numero da conta: "))

resto = conta % 10
conta = conta//10
a = resto*2

resto = conta % 10
conta = conta//10
b = resto*3

resto = conta % 10
conta = conta//10
c = resto*4

resto = conta % 10
conta = conta//10
d = resto*5

v = (a+b+c+d)%11

print(v)
-- EXECUTION TIME:
0.187353
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
